istio/cyber-range-prod/gateway/templates/internal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: octavia  # Use Octavia Ingress Controller class name
    octavia.ingress.kubernetes.io/actions.default: >
      {"Type":"fixed-response","FixedResponseConfig":{"ContentType":"application/json","StatusCode":"403","MessageBody":"{ \"code\" : 403, \"message\" : \"The requested URI is forbidden, please use the correct URI\"  }"}}
    octavia.ingress.kubernetes.io/actions.istio-ingressgateway: >
      {"Type":"forward","ForwardConfig":{"TargetGroups":[{"ServiceName":"istio-ingressgateway-prod","ServicePort":"80","Weight":100}]}}
    octavia.ingress.kubernetes.io/actions.ssl-redirect: >-
      {"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}
    octavia.ingress.kubernetes.io/healthcheck-interval-seconds: '10'
    octavia.ingress.kubernetes.io/healthcheck-path: /healthz/ready
    octavia.ingress.kubernetes.io/healthcheck-port: '15021'
    octavia.ingress.kubernetes.io/healthcheck-protocol: HTTPS
    octavia.ingress.kubernetes.io/inbound-cidrs: 0.0.0.0/0
    octavia.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    octavia.ingress.kubernetes.io/scheme: internal
  labels:
    argocd.argoproj.io/instance: istio-ingressgateway-prod
    istio: istio-ingressgateway-prod
  name: istio-ingress-internal
  namespace: istio-ingress
spec:
  defaultBackend:
    service:
      name: default
      port:
        name: use-annotation
  rules:
    - http:
        paths:
          - backend:
              service:
                name: istio-ingressgateway-prod
                port:
                  number: 80
            path: /*
            pathType: ImplementationSpecific
